# ta-lib

./: .gitignore  404.html  CLAUDE.md  CMakeLists.txt  Makefile.am  README.md  RUST_CONVERSION_PLAN.md  SPECS.md  index.html  ta_func_api.xml  ta_func_list.txt
.github/workflows/: main-nightly-tests.yml
about/: index.html
api/: index.html
docs/: api.md  faq.md  functions.md  index.md  install.md  wrappers.md
faq/: index.html
functions/: index.html
include/: ta_common.h  ta_config.h  ta_defs.h  ta_func.h
install/: index.html
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/ta_func/: mod.rs  mult.rs
rust/tests/: mult_test.rs
scripts/: package.py
scripts/utilities/: common.py  files.py  versions.py
search/: search_index.json
specs/: c-compilation.md  dependencies.md  python-wrapper.md  technical-indicators.md
src/ta_abstract/: ta_group_idx.c  ta_java_defs.h
src/ta_common/: ta_global.c  ta_global.h  ta_retcode.c  ta_retcode.csv
src/ta_func/: Makefile.am  ta_ACCBANDS.c  ta_ACOS.c  ta_AD.c  ta_ADD.c  ta_ADOSC.c  ta_ADX.c  ta_ADXR.c  ta_APO.c  ta_AROON.c  ta_AROONOSC.c  ta_ASIN.c  ta_ATAN.c  ta_ATR.c  ta_AVGDEV.c  ta_AVGPRICE.c  ta_BBANDS.c  ta_BETA.c  ta_BOP.c  ta_CCI.c  ta_CDL2CROWS.c  ta_CDL3BLACKCROWS.c  ta_CDL3INSIDE.c  ta_CDL3LINESTRIKE.c  ta_CDL3OUTSIDE.c  ta_CDL3STARSINSOUTH.c  ta_CDL3WHITESOLDIERS.c  ta_CDLABANDONEDBABY.c  ta_CDLADVANCEBLOCK.c  ta_CDLBELTHOLD.c  ta_CDLBREAKAWAY.c  ta_CDLCLOSINGMARUBOZU.c  ta_CDLCONCEALBABYSWALL.c  ta_CDLCOUNTERATTACK.c  ta_CDLDARKCLOUDCOVER.c  ta_CDLDOJI.c  (+127 more)
swig/: README.TXT
wrappers/: index.html
(+18 files in other folders)
